--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "host-js"
-account_id = "1a8d7ab249c3adee6e6b4eeccf8ff123"
+account_id = "seu ID da cloudflares"
 workers_dev = true
 compatibility_date = "2024-08-06"
 
@@ -9,7 +9,7 @@ main = "./src/index.js"
 # Configuração do bucket R2
 [[r2_buckets]]
 binding = "MY_BUCKET"
-bucket_name = "host-js" # Nome do bucket R2 em produção
+bucket_name = "nome do bucket" # Nome do bucket R2 em produção
 
 [env.production]
 workers_dev = false
